force-app/main/default/objects/Product2/fields/Handcrafted_for_WHM_Demo_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Handcrafted_for_WHM_Demo_Scenario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Handcrafted for WHM Demo Scenario</description>
    <inlineHelpText>Was this handcrafted for WHM Demo Scenario?</inlineHelpText>
    <label>Handcrafted for WHM Demo Scenario</label>
    <type>Checkbox</type>
</CustomField>