force-app/main/default/objects/Product2/fields/Product_Image_Static_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_Static_Resource_Name__c</fullName>
    <label>Product Image Static Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>