force-app/main/default/objects/Product2/fields/Publication_Number__c.field-meta.xml
<CustomField>
    <fullName>Publication_Number__c</fullName>
    <formula>IF( TEXT(Family) = &quot;Publication&quot;,  ProductCode , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication Number</label>
    <type>Text</type>
</CustomField>