force-app/main/default/objects/Product2/recordTypes/WHM_Product_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>WHM_Product_Record_Type</fullName>
    <active>true</active>
    <label>WHM Product Record Type</label>
</RecordType>