force-app/main/default/objects/Product2/listViews/WHM_All_Products.listView-meta.xml
<ListView>
    <fullName>WHM_All_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Audience__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Available__c</columns>
    <columns>Product_Image_Static_Resource_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>WHM All Products</label>
</ListView>