force-app/main/default/objects/Product2/listViews/WHM_PPE.listView-meta.xml
<ListView>
    <fullName>WHM_PPE</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Available__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>PPE</value>
    </filters>
    <label>WHM PPE</label>
</ListView>